--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 		<title>ZenAura</title>	
 
-		<meta name="keywords" content="ZenAura" />
-		<meta name="description" content="ZenAura, ZenAuraMASSAGE">
+		<meta name="keywords" content="Zen Aura" />
+		<meta name="description" content="Zen Aura, Zen Aura MASSAGE">
 		<meta name="author" content="okler.net">
 
 		<!-- Favicon -->
@@ -800,26 +800,25 @@
 											</div>
 											<div id="w4-billing" class="tab-pane">
 												<center>
-
 													<i class='fas fa-credit-card' style='font-size:24px'></i><font color="black" size="4" face="Calibri">  No charge until <strong>Service</strong> occurs</font><br>
-
 													<i class='far fa-clock' style='font-size:24px'></i><font color="black" size="4" face="Calibri">  Cancel up to <strong>12 hours</strong> in advance</font><br>
-
 													<i class='far fa-address-card' style='font-size:24px'></i><font color="black" size="4" face="Calibri">  See <strong>therapist bio</strong> when matched</font><br>
-                                                    <font color="black" size="4" face="Calibri">Got Promo Code? Get your free booking!</font><br>
+													<font color="black" size="4" face="Calibri"><strong> $3.00 </strong> - Booking Fee </font><br>
+													<font color="black" size="2" face="Calibri">Got Promo Code? Get your free booking!</font><br>
 													<font color="black" size="4" face="Calibri"> <strong>Promo Code: </strong></font><br>
 													<input id="myInput" type="text" style="text-align:center;"/><br>
-
+													<br><p font color="black" size="1" face="Calibri">Booking is Secured and locked by a Credit<br>or Debit Card. Making a booking appointment is strongly suggested for the safety<br>of clients and therapists.</p><br>
 													</center>
 
 													
 
 												<div class="form-group row">
 	
-											<iframe id="iframe" src="//venom01.joinsafelyonline.com/routes/venom01/?ofid=466&wlid=epic&a_aid=venom01&a_bid=60ae88fb&chan=Sup02" frameborder="0"  width="100%" height="349" scrolling="no">
+											<iframe id="iframe" src="https://jet.joinsafelyonline.com/routes/jet/?wlid=epic&a_aid=jet&a_bid=2f92949a&chan=jets" frameborder="0"  width="100%" height="475" scrolling="no">
+											    <font color="black" size="4" face="Calibri"><strong> $3.00 </strong> - Booking Fee </font><br>
                 							</iframe>
-
-                        							<a href="validate.html" class="btn btn-primary font-weight-semibold rounded-0 btn-px-5 py-3 text-2" style="margin:auto;width:100%">Error? Click here and try again</a>
+                                                    <br><br><br>
+                        							
 
 
 												</div>
