--- a/index-2.html
+++ b/index-2.html
@@ -2,7 +2,7 @@
 <html data-style-switcher-options="{'changeLogo': false, 'colorPrimary': '#00AACE', 'colorSecondary': '#e36159', 'colorTertiary': '#2baab1', 'colorQuaternary': '#383f48', 'borderRadius': 0}">
 	
 
-<!-- Mirrored from zen-aura.com/bc/24/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 06 Oct 2020 09:38:02 GMT -->
+<!-- Mirrored from zen-aura.com/bc/24/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 06 Oct 2020 09:39:41 GMT -->
 <head>
 
 		<!-- Basic -->
@@ -966,5 +966,5 @@
 	</body>
 
 
-<!-- Mirrored from zen-aura.com/bc/24/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 06 Oct 2020 09:38:57 GMT -->
+<!-- Mirrored from zen-aura.com/bc/24/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 06 Oct 2020 09:39:41 GMT -->
 </html>
